Change 6-month plan to yearly plan at 9.99
- Replace 6-month plan with yearly plan
- Update pricing from 9.99/6 months to 9.99/year
- Recalculate savings: yearly plan saves 20 vs monthly
- Update data-plan attribute from 'biannual' to 'yearly'
- Add 'Best value!' feature to yearly plan
- Update JavaScript pricing data and payment processing
- Keep same Stripe amount: 7999 cents (9.99)

--- a/signup.html
+++ b/signup.html
@@ -154,17 +154,18 @@
                                 </ul>
                             </div>
 
-                            <div class="plan-card" data-plan="biannual">
+                            <div class="plan-card" data-plan="yearly">
                                 <div class="plan-header">
-                                    <h3>6-Month Plan</h3>
-                                    <div class="price">$79.99/6 months</div>
-                                    <p class="plan-note">Save $70 vs monthly</p>
+                                    <h3>Yearly Plan</h3>
+                                    <div class="price">$79.99/year</div>
+                                    <p class="plan-note">Save $220 vs monthly</p>
                                 </div>
                                 <ul>
                                     <li>Unlimited consultations</li>
                                     <li>Up to 6 pets</li>
                                     <li>On-demand access</li>
                                     <li>Priority support</li>
+                                    <li>Best value!</li>
                                 </ul>
                             </div>
                         </div>
